# firecall

./: .bazelrc  .gitignore  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE
cmd/firecall/: BUILD.bazel  service.go
helpers/: k8s.bzl
k8s/: BUILD.bazel  deploy.yaml  ingress.yaml  secret.yaml
